[package]
name = "danish-dictionary-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["derive"] }
flagset = "0.4.3"
fs-err = "2.7.0"
itertools = "0.10.3"
pdf = "0.7.2"
